[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-core-py"
version = "0.1.0"
description = "Python implementation of Bitcoin Core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bitcoin Python Team", email = "bitcoin-py@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
]
keywords = ["bitcoin", "cryptocurrency", "blockchain", "crypto"]

dependencies = [
    "coincurve>=19.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.5.0",
    "asyncio-pool>=0.6.0",
    "plyvel>=1.5.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyzmq>=25.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
]

[project.scripts]
bitcoind-py = "bitcoin.node:main"
bitcoin-cli-py = "bitcoin.cli:main"
bitcoin-wallet-py = "bitcoin.wallet.cli:main"

[project.urls]
Homepage = "https://github.com/bitcoin-python/bitcoin-core-py"
Documentation = "https://bitcoin-python.github.io/docs"
Repository = "https://github.com/bitcoin-python/bitcoin-core-py"

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["coincurve.*", "plyvel.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
